# cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_folder}}/: LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/: pyproject.toml
