[project]
name = "{{cookiecutter-project-name}}"
version = "0.1.0"
description = {{cookiecutter.description}}
{% if cookiecutter.license != 'No license file' %}license = { file = "LICENSE" }{% endif %}

authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]

readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
